* Add S3 remote backend to allow performing a muninn pull from an object store.

* Add support for s3://bucket entries in the credentials authorization file.
  These entries can be used by the S3 storage backend and S3 remote backend.

* Fixed issue where is_defined(<namespace>) did not work for the sqlite
  backend when using a table prefix.

6.1.1 2023-08-02
~~~~~~~~~~~~~~~~

* Fixed several issues with the return value of Archive.retrieve().

6.1 2023-07-24
~~~~~~~~~~~~~~

* The S3 bucket prefix is now created as a 'directory object' so its existence
  can be explicitly checked.

* muninn-pull for http/https will now retry once in case of a timeout error.

* muninn-prepare --dry-run now adds a ';' at the end of each line.

* Added --verify-hash option to muninn-retrieve.

* Command line tools no longer show a progress bar if there is no tty.

* Fixed issue where failing to set/unset a tag did not result in an error.

* Fixed issue with relocating products in an S3 archive when the product
  contained an empty subdirectory.

* Fixed issue where muninn-summary could not group by core.physical_name or
  core.archive_path.

* Fixed issue where muninn was incorrectly using subdirectories in the
  temporary directory if the 'tempdir' archive configuration option was set.

* Fixed issue where Archive.retrieve() and Archive.export() were returning a
  list if a single properties Struct was given as parameter and
  `use_enclosing_directory` was not set. Additionally, each entry for a
  product where `use_enclosing_directory` _is_ set will now always be a list.

6.0.1 2022-11-17
~~~~~~~~~~~~~~~~

* Fixed python 2 issues and updated documentation that python>=2.7 is required.

6.0 2022-10-28
~~~~~~~~~~~~~~

* Introduced a public python API for muninn.

* muninn-retrieve and muninn-export will now download a product based on the
  core.remote_url setting if core.archive_path was not set (i.e. the product
  was not stored in the archive).