@@ -1,5 +1,8 @@
 * Add S3 remote backend to allow performing a muninn pull from an object store.
 
+* A muninn pull will now set core.hash (if it did not yet have a value) similar
+  to muninn ingest.
+
 * Add support for s3://bucket entries in the credentials authorization file.
   These entries can be used by the S3 storage backend and S3 remote backend.
 
